@@ -16,13 +16,12 @@ of the criteria you wish to use, select the group size, and select your input fi
 
 If you prefer to create the jar file from the source code:
 -
-- Download the src/main/java folder and Manifest file and put in the same directory
-- Compile the java files using the following command: javac *.java
-- Download the dependencies in the lib folder and put in the same folder as the java files
-- Add your input file to the same folder as the dependencies
-- Create the jar file using the following command: 
-   jar cfm team-generation-project.jar Manifest.txt *.class *.dll com javafx javafx.base javafx.controls javafx.fxml javafx.graphics javafx.media javafx.swing javafx.web main
-- Run the jar file (java -jar team-generation-project.jar)
+- Download the project as a ZIP file and extract it
+- Compile the java files using the following command: java --module-path "Path to your javafx sdk lib folder" --add-modules javafx.controls,javafx.fxml *.java
+- Copy Manifest.txt, the input file and all the dll files from the javafx sdk bin folder to the same directory as your compiled java files
+- Create a new folder called "main/resources" and copy the GUI.fxml file from src/main/resources and place it in the new folder
+- Create the jar file using the following command: jar cfm team-generation-project.jar Manifest.txt *.class *.dll main *.jar
+- Run the jar file using the following command: java --module-path C:\Users\winta\IdeaProjects\team-generation-project-main\team-generation-project-main\javafx-sdk-17.0.2\lib --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media -jar team-generation-project.jar
 
 Input file specifications:
 - 
